# Facial-Recognition-App

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
GUI/: MainWindow.cpp  MainWindow.hpp  window.hpp  window.ui
camera/: Camera.cpp  Camera.hpp
face-recognition/: Face.cpp  Face.hpp  FaceIdentification.py
